--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 				<div class="blog__slider__item">
 					<img src="img/hero-slider/2.jpg" alt="slider image">
 					<div class="blog__content text-white mb-5">
-						<h3>The best varieties <br> Proflora 2019 - Awarded 1st, 2nd & 3rd</h3>
+						<h3>The best varieties <br> Proflora 2019 - Awarded</h3>
 					</div>
 				</div>
 				<div class="blog__slider__item">
@@ -131,7 +131,7 @@
 				<div class="blog__cata">Rainforest & SEDEX - SMETA Certified</div>
 			</div>
 			<blockquote>
-				<P>Bella Flowers, the wonderful company where people and flowers bloom.</P>
+				<P>Bella Flowers is the wonderful company where people and flowers bloom.</P>
 				<h4>José Luis Suárez</h4>
 				<h5>FOUNDER</h5>
 			</blockquote>
@@ -249,7 +249,7 @@
 					<!-- Content -->
 					<h6 class="text-uppercase font-weight-bold">Bella Flowers</h6>
 					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-					<p>Bella Flowers is a wonderful company where people and flowers bloom.</p>
+					<p>We are the wonderful company where people and flowers bloom.</p>
 
 				</div>
 				<!-- Grid column -->
@@ -260,10 +260,10 @@
 					<!-- Links -->
 					<h6 class="text-uppercase font-weight-bold">Products</h6>
 					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-					<p><a href="#!">Red Roses</a></p>
-					<p><a href="#!">Pink Roses</a></p>
-					<p><a href="#!">Yellow Roses</a></p>
-					<p><a href="#!">Eco Roses</a></p>
+					<p><a href="gallery1.html">Red roses</a></p>
+					<p><a href="gallery4.html">Yellow roses</a></p>
+					<p><a href="gallery7.html">Bicolor</a></p>
+					<p><a href="gallery.html">All our roses</a></p>
 
 				</div>
 				<!-- Grid column -->
