--- a/about.html
+++ b/about.html
@@ -151,7 +151,7 @@
 				  <!-- Title -->
 				  <a href="#!" class="black-text">Excellence & Quality</a>
 				  <!-- Text -->
-				  <p class="card-title text-muted font-small mt-3 mb-2">Our procedures are strictly monitored to maintain the highest quality standards. We have been awarded for our passion and quaility delivery</p>  
+				  <p class="card-title text-muted font-small mt-3 mb-2">Our procedures are strictly monitored to maintain the highest quality standards. We have been awarded for our passion and quaility delivery. Proflora 2019 - Awarded 1st, 2nd & 3rd</p>  
 				</div>
 	  
 			  </div>
@@ -186,7 +186,7 @@
 							</div>
 						</div>
 						<p>
-							For over 30 years, we have been involved in growing fresh cut roses for the worldwide market. Now, we decided to focus our efforts in Direct Store Delivery programs orientated to supermarkets and retail locations that want to offer freshness and quality roses to their customers, by having our products delivered at their stores directly from our farms, located in Colombia, South America.
+							For over 30 years, we have been involved in growing fresh cut roses for the worldwide market. Now, we decided to focus our efforts in Direct Store Delivery programs orientated to supermarkets and retail locations that want to offer freshness and quality roses to their customers, by having our products delivered at their stores directly from our farms, located in Colombia.
 							Our roses are certified under third party sustainability protocols such as Rainforest Alliance and  SMETA - Sedex audits</p>
 
 					</div>
@@ -199,6 +199,49 @@
 			</div>
 		</div>
 	</section>
+
+
+	<div class="container my-3 py-4 z-depth-1">
+
+ 
+		<!--Section: Content-->
+		<section class="px-md-5 mx-md-5 dark-grey-text text-center text-lg-left">
+	
+		  <!--Grid row-->
+		  <div class="row">
+	
+			<!--Grid column-->
+			<div class="col-lg-6 mb-4 mb-lg-0 d-flex align-items-center justify-content-center">
+	
+			  <img src="img/founders.jpg" class="img-fluid" alt="founders image">
+	
+			</div>
+			<!--Grid column-->
+	
+			<!--Grid column-->
+			<div class="col-lg-6 mb-4 mb-lg-0">
+	
+				<h3 class="about__title">History & Founders</h3>
+
+			  <p class="font-weight-bold">The legacy of passion</p>
+	
+			  <p class="text-muted">For over 30 years, we have been growing fresh cut roses for the worldwide market. We are focused in Direct Store Delivery programs orientated to markets and retail locations that want to offer freshness and quality roses to their customers, by having our products delivered at their stores directly from our farms, located in Colombia.
+				Our roses are certified under third party sustainability protocols such as Rainforest Alliance and  SMETA - Sedex audits</p>
+	
+			  <a class="font-weight-bold" href="blog-single.html" >Learn more > </a>
+	
+			</div>
+			<!--Grid column-->
+	
+		  </div>
+		  <!--Grid row-->
+		</section>
+		<!--Section: Content-->
+	
+	
+	  </div>
+
+
 	<!-- About Page end -->
 
 	<!-- Footer -->
