--- a/blog-single.html
+++ b/blog-single.html
@@ -87,8 +87,8 @@
 		<div class="video-background-content container h-100">
 			<div class="d-flex h-100 text-center align-items-center">
 				<div class="w-100 text-white">
-					<h1 class="display-4">Sustainability</h1>
-					<p class="lead mb-0">Eco & Social commitment</p>
+					<h1 class="display-4">Commitment</h1>
+					<p class="lead mb-0">Eco & Social priority</p>
 				</div>
 			</div>
 		</div>
@@ -96,178 +96,178 @@
 	<!-- End -->
 
 	<!-- Blog Page -->
-		<article class="blog__article">
-			<div class="blog__container">
-				<div class="blog__header">
-					<div class="blog__cata">Rainforest & SEDEX - SMETA Certified</div>
-					<h2 class="blog__single__title">Success is sustainable growth</h2>
-				</div>
-		</article>
+	<article class="blog__article">
 		<div class="blog__container">
-			<p>Bella Flowers - as an employer is aware of the important social role a fundamental part of the flower
-				industry, which is why our motivation and commitment to our employees is to provide and ensure fair
-				treatment and good working conditions, training programs continue under strict social responsibility and
-				environmental care.</p>
+			<div class="blog__header">
+				<div class="blog__cata">Rainforest & SEDEX - SMETA Certified</div>
+				<h2 class="blog__single__title">Success is sustainable growth</h2>
+			</div>
+	</article>
+	<div class="blog__container">
+		<p>Bella Flowers - as an employer is aware of the important social role a fundamental part of the flower
+			industry, which is why our motivation and commitment to our employees is to provide and ensure fair
+			treatment and good working conditions, training programs continue under strict social responsibility and
+			environmental care.</p>
+	</div>
+
+	<div class="blog__slider">
+		<div class="blog__slider__item">
+			<img src="img/eco/1.jpg" alt="image1">
+		</div>
+		<div class="blog__slider__item">
+			<img src="img/eco/2.jpg" alt="image2">
+		</div>
+		<div class="blog__slider__item">
+			<img src="img/eco/3.JPG" alt="image3">
+		</div>
+		<div class="blog__slider__item">
+			<img src="img/eco/4.JPG" alt="image4">
+		</div>
+	</div>
+
+	<div class="mb-4 blog__container">
+		<h4>Sustainability policies</h4>
+		<br>
+		<p>
+			We have social, environmental and occupational health policies and programs giving each of these
+			issues
+			all the necessary importance.
+			Our social responsibility policy provides support to our employees’ medical and dental services,
+			counseling in family welfare and health all these services extended to their family groups for the
+			sole purpose of improving their living conditions, our company also offers employees transportation
+			and room service ensures a safe working conditions.
+			We have an environmental policy that maintains the integrity of the ecosystems by preventing
+			alteration
+			or destruction through the implementation of support programs and continuous commitment work.
+		</p>
+	</div>
+
+
+	<!-- Footer -->
+	<footer class="page-footer font-small unique-color-dark">
+
+		<div style="background-color: #252525;">
+			<div class="container">
+
+				<!-- Grid row-->
+				<div class="row py-4 d-flex align-items-center">
+
+					<!-- Grid column -->
+					<div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
+						<h6 class="mb-0 text-white">Get connected with us on social networks!</h6>
+					</div>
+					<!-- Grid column -->
+					<div class="lead col-md-6 text-white col-lg-7 text-center text-md-right">
+
+						<!-- Facebook -->
+						<a class="fb-ic">
+							<a href="#"><i class="fa fa-facebook"></i></a>
+						</a>
+						<!-- Twitter -->
+						<a class="tw-ic">
+							<a href="#"><i class="fa fa-twitter"></i></a>
+						</a>
+						<!--Instagram-->
+						<a class="ins-ic">
+							<a href="#"><i class="fa fa-instagram"></i></a>
+						</a>
+
+					</div>
+					<!-- Grid column -->
+
+				</div>
+				<!-- Grid row-->
+
+			</div>
 		</div>
 
-			<div class="blog__slider">
-				<div class="blog__slider__item">
-					<img src="img/eco/1.jpg" alt="image1">
+		<!-- Footer Links -->
+		<div class="container text-center text-md-left mt-5">
+
+			<!-- Grid row -->
+			<div class="row mt-3">
+
+				<!-- Grid column -->
+				<div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+
+					<!-- Content -->
+					<h6 class="text-uppercase font-weight-bold">BellaFlowers</h6>
+					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+					<p>BellaFlowers is a wonderful company where people and flowers bloom.</p>
+
 				</div>
-				<div class="blog__slider__item">
-					<img src="img/eco/2.jpg" alt="image2">
+				<!-- Grid column -->
+
+				<!-- Grid column -->
+				<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+
+					<!-- Links -->
+					<h6 class="text-uppercase font-weight-bold">Products</h6>
+					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+					<p><a href="#!">Red Roses</a></p>
+					<p><a href="#!">Pink Roses</a></p>
+					<p><a href="#!">Yellow Roses</a></p>
+					<p><a href="#!">Eco Roses</a></p>
+
 				</div>
-				<div class="blog__slider__item">
-					<img src="img/eco/3.JPG" alt="image3">
+				<!-- Grid column -->
+
+				<!-- Grid column -->
+				<div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+
+					<!-- Links -->
+					<h6 class="text-uppercase font-weight-bold">Useful links</h6>
+					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+					<p><a href="#!">Your Account</a></p>
+					<p><a href="#!">Become an Affiliate</a></p>
+					<p><a href="#!">Shipping Rates</a></p>
+					<p><a href="#!">Help</a></p>
+
 				</div>
-				<div class="blog__slider__item">
-					<img src="img/eco/4.JPG" alt="image4">
+				<!-- Grid column -->
+
+				<!-- Grid column -->
+				<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+
+					<!-- Links -->
+
+					<h6 class="text-uppercase font-weight-bold">Contact</h6>
+					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+					<p><i class="fa fa-location-arrow"></i> New York, NY 10012, US</p>
+					<p><i class="fa fa-inbox"></i> info@bella.com</p>
+					<p><i class="fa fa-phone-square"></i> + 01 234 567 88</p>
+					<p><i class="fa fa-phone-square"></i> + 01 234 567 88</p>
+
 				</div>
+				<!-- Grid column -->
+
 			</div>
+			<!-- Grid row -->
 
-			<div class="mb-4 blog__container">
-				<h4>Sustainability policies</h4>
-				<br>
-				<p>
-					We have social, environmental and occupational health policies and programs giving each of these
-					issues
-					all the necessary importance.
-					Our social responsibility policy provides support to our employees’ medical and dental services,
-					counseling in family welfare and health all these services extended to their family groups for the
-					sole purpose of improving their living conditions, our company also offers employees transportation
-					and room service ensures a safe working conditions.
-					We have an environmental policy that maintains the integrity of the ecosystems by preventing
-					alteration
-					or destruction through the implementation of support programs and continuous commitment work.
-				</p>
+		</div>
+		<!-- Footer Links -->
+
+		<!-- Copyright -->
+		<div class="footer__section">
+			<div class="container">
+				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+				<div class="footer__copyright__text">
+					<p>BellaFlowers &copy; <script>
+							document.write(new Date().getFullYear());
+						</script> All rights reserved | This template is made with <i class="fa fa-heart"
+							aria-hidden="true"></i> by <a href="https://colorlib.co" target="_blank">Colorlb</a>
+					</p>
+				</div>
+				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 			</div>
+		</div>
+	</footer>
 
-
-			<!-- Footer -->
-			<footer class="page-footer font-small unique-color-dark">
-
-				<div style="background-color: #252525;">
-					<div class="container">
-
-						<!-- Grid row-->
-						<div class="row py-4 d-flex align-items-center">
-
-							<!-- Grid column -->
-							<div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
-								<h6 class="mb-0 text-white">Get connected with us on social networks!</h6>
-							</div>
-							<!-- Grid column -->
-							<div class="lead col-md-6 text-white col-lg-7 text-center text-md-right">
-
-								<!-- Facebook -->
-								<a class="fb-ic">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-								</a>
-								<!-- Twitter -->
-								<a class="tw-ic">
-									<a href="#"><i class="fa fa-twitter"></i></a>
-								</a>
-								<!--Instagram-->
-								<a class="ins-ic">
-									<a href="#"><i class="fa fa-instagram"></i></a>
-								</a>
-
-							</div>
-							<!-- Grid column -->
-
-						</div>
-						<!-- Grid row-->
-
-					</div>
-				</div>
-
-				<!-- Footer Links -->
-				<div class="container text-center text-md-left mt-5">
-
-					<!-- Grid row -->
-					<div class="row mt-3">
-
-						<!-- Grid column -->
-						<div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-
-							<!-- Content -->
-							<h6 class="text-uppercase font-weight-bold">BellaFlowers</h6>
-							<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-							<p>BellaFlowers is a wonderful company where people and flowers bloom.</p>
-
-						</div>
-						<!-- Grid column -->
-
-						<!-- Grid column -->
-						<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-
-							<!-- Links -->
-							<h6 class="text-uppercase font-weight-bold">Products</h6>
-							<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-							<p><a href="#!">Red Roses</a></p>
-							<p><a href="#!">Pink Roses</a></p>
-							<p><a href="#!">Yellow Roses</a></p>
-							<p><a href="#!">Eco Roses</a></p>
-
-						</div>
-						<!-- Grid column -->
-
-						<!-- Grid column -->
-						<div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-
-							<!-- Links -->
-							<h6 class="text-uppercase font-weight-bold">Useful links</h6>
-							<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-							<p><a href="#!">Your Account</a></p>
-							<p><a href="#!">Become an Affiliate</a></p>
-							<p><a href="#!">Shipping Rates</a></p>
-							<p><a href="#!">Help</a></p>
-
-						</div>
-						<!-- Grid column -->
-
-						<!-- Grid column -->
-						<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-
-							<!-- Links -->
-
-							<h6 class="text-uppercase font-weight-bold">Contact</h6>
-							<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-							<p><i class="fa fa-location-arrow"></i> New York, NY 10012, US</p>
-							<p><i class="fa fa-inbox"></i> info@bella.com</p>
-							<p><i class="fa fa-phone-square"></i> + 01 234 567 88</p>
-							<p><i class="fa fa-phone-square"></i> + 01 234 567 88</p>
-
-						</div>
-						<!-- Grid column -->
-
-					</div>
-					<!-- Grid row -->
-
-				</div>
-				<!-- Footer Links -->
-
-				<!-- Copyright -->
-				<div class="footer__section">
-					<div class="container">
-						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-						<div class="footer__copyright__text">
-							<p>BellaFlowers &copy; <script>
-									document.write(new Date().getFullYear());
-								</script> All rights reserved | This template is made with <i class="fa fa-heart"
-									aria-hidden="true"></i> by <a href="https://colorlib.co" target="_blank">Colorlb</a>
-							</p>
-						</div>
-						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-					</div>
-				</div>
-			</footer>
-
-			<!--====== Javascripts & Jquery ======-->
-			<script src="js/vendor/jquery-3.2.1.min.js"></script>
-			<script src="js/jquery.slicknav.min.js"></script>
-			<script src="js/slick.min.js"></script>
-			<script src="js/main.js"></script>
+	<!--====== Javascripts & Jquery ======-->
+	<script src="js/vendor/jquery-3.2.1.min.js"></script>
+	<script src="js/jquery.slicknav.min.js"></script>
+	<script src="js/slick.min.js"></script>
+	<script src="js/main.js"></script>
 
 </body>
 
