--- a/index.html
+++ b/index.html
@@ -19,12 +19,8 @@
 	<!-- Main Stylesheets -->
 	<link rel="stylesheet" href="css/style.css" />
 
-
-	<!--[if lt IE 9]>
-		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
-
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -39,9 +35,9 @@
 			<div class="row">
 				<div class="col-sm-4 col-md-3 order-2 order-sm-1">
 					<div class="header__social">
-						<a href="#"><i class="fa fa-facebook"></i></a>
-						<a href="#"><i class="fa fa-twitter"></i></a>
-						<a href="#"><i class="fa fa-instagram"></i></a>
+						<a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
+						<!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
+						<a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"></i></a>
 						<a href="https://www.linkedin.com/company/bella-flowers-co/" target="_blank"><i
 								class="fa fa-linkedin-square"></i></a>
 
@@ -84,47 +80,97 @@
 	</header>
 	<!-- Header Section end -->
 
-	<!-- GALLERY SLIDER -->
-	<!-- <section class=" hero__section blog__single__page"> -->
-		<div>
-			<div class="blog__slider">
-				<div class="blog__slider__item">
-					<img src="img/hero-slider/1.jpg" alt="slider image">
-					<div class="blog__content text-white mb-5">
-						<h3> Welcome to Bella Flowers!</h3>
+		<div class="container my-5">
+			<div class="carousel slide" id="main-carousel" data-ride="carousel">
+				<ol class="carousel-indicators">
+					<li data-target="#main-carousel" data-slide-to="0" class="active"></li>
+					<li data-target="#main-carousel" data-slide-to="1"></li>
+					<li data-target="#main-carousel" data-slide-to="2"></li>
+					<li data-target="#main-carousel" data-slide-to="3"></li>
+				</ol><!-- /.carousel-indicators -->
+				
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+						<img class="d-block img-fluid" src="img/hero-slider/11.jpg" alt="">
+						<div class="carousel-caption d-none d-md-block text-white">
+							<h1>Welcome to Bella Flowers!</h1>
+						</div>
 					</div>
-				</div>
-				<div class="blog__slider__item">
-					<img src="img/hero-slider/2.jpg" alt="slider image">
-					<div class="blog__content text-white mb-5">
-						<h3>The best varieties <br> Proflora 2019 - Awarded</h3>
+					<div class="carousel-item">
+						<img class="d-block img-fluid" src="img/hero-slider/22.jpg" alt="">
+						<div class="carousel-caption d-none d-md-block text-white">
+							<h2>The best varieties</h2>
+							<p>Proflora 2019 - Awarded</p>
+						</div>
 					</div>
-				</div>
-				<div class="blog__slider__item">
-					<img src="img/hero-slider/3.jpg" alt="slider image">
-					<div class="blog__content text-white mb-5">
-						<h3> Commitment to quality and environment</h3>
+					<div class="carousel-item">
+						<img class="d-block img-fluid" src="img/hero-slider/33.jpg" alt="">
+						<div class="carousel-caption d-none d-md-block text-white">
+							<h2>Commitment to quality and environment</h2>
+							<p>Rainforest & SEDEX - SMETA Certified</p>
+						</div>
 					</div>
-				</div>
-				<div class="blog__slider__item">
-					<img src="img/Farm 1.jpg" alt="slider image">
-					<div class="blog__content text-white mb-5">
-						<h3> Commitment to quality and environment</h3>
+					<div class="carousel-item">
+						<img src="img/hero-slider/44.jpg" alt="" class="d-block img-fluid">
+						<div class="carousel-caption d-none d-md-block text-white">
+							<h2>Certified farms</h2>
+							<p>Rainforest & SEDEX - SMETA Certified</p>
+						</div>
 					</div>
-				</div>
+				</div><!-- /.carousel-inner -->
+				
+				<a href="#main-carousel" class="carousel-control-prev" data-slide="prev">
+					<span class="carousel-control-prev-icon"></span>
+					<span class="sr-only" aria-hidden="true">Prev</span>
+				</a>
+				<a href="#main-carousel" class="carousel-control-next" data-slide="next">
+					<span class="carousel-control-next-icon"></span>
+					<span class="sr-only" aria-hidden="true">Next</span>
+				</a>
+			</div><!-- /.carousel -->
+		</div><!-- /.container -->
 
-				<div class="blog__slider__item">
-					<img src="img/hero-slider/4.jpg" alt="slider image">
-					<div class="blog__content text-white mb-5">
-						<h3> Certified farms</h3>
-					</div>
+
+	<!-- <section class=" hero__section blog__single__page"> -->
+	<div>
+		<div class="blog__slider">
+			<div class="blog__slider__item">
+				<img src="img/hero-slider/1.jpg" alt="slider image">
+				<div class="blog__content text-white mb-5">
+					<h3> Welcome to Bella Flowers!</h3>
+				</div>
+			</div>
+			<div class="blog__slider__item">
+				<img src="img/hero-slider/2.jpg" alt="slider image">
+				<div class="blog__content text-white mb-5">
+					<h3>The best varieties <br> Proflora 2019 - Awarded</h3>
+				</div>
+			</div>
+			<div class="blog__slider__item">
+				<img src="img/hero-slider/3.jpg" alt="slider image">
+				<div class="blog__content text-white mb-5">
+					<h3> Commitment to quality and environment</h3>
+				</div>
+			</div>
+			<div class="blog__slider__item">
+				<img src="img/Farm 1.jpg" alt="slider image">
+				<div class="blog__content text-white mb-5">
+					<h3> Commitment to quality and environment</h3>
 				</div>
 			</div>
 
-
+			<div class="blog__slider__item">
+				<img src="img/hero-slider/4.jpg" alt="slider image">
+				<div class="blog__content text-white mb-5">
+					<h3> Certified farms</h3>
+				</div>
+			</div>
 		</div>
+
+
+	</div>
 	<!-- </section> -->
-	
+
 	<article class="blog__article">
 		<div class="blog__container">
 			<div class="blog__header">
@@ -135,7 +181,7 @@
 				<h4>José Luis Suárez</h4>
 				<h5>FOUNDER</h5>
 			</blockquote>
-		</article>
+	</article>
 	<!-- Hero Section end -->
 
 
@@ -212,15 +258,15 @@
 
 						<!-- Facebook -->
 						<a class="fb-ic">
-							<a href="#"><i class="fa fa-facebook"></i></a>
+							<a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
 						</a>
 						<!-- Twitter -->
-						<a class="tw-ic">
+						<!-- <a class="tw-ic">
 							<a href="#"><i class="fa fa-twitter"></i></a>
-						</a>
+						</a> -->
 						<!--Instagram-->
 						<a class="ins-ic">
-							<a href="#"><i class="fa fa-instagram"></i></a>
+							<a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
 						</a>
 
 						<a class="ins-ic">
