--- a/index.html
+++ b/index.html
@@ -36,11 +36,9 @@
 				<div class="col-sm-4 col-md-3 order-2 order-sm-1">
 					<div class="header__social">
 						<a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
-						<!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
 						<a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"></i></a>
 						<a href="https://www.linkedin.com/company/bella-flowers-co/" target="_blank"><i
 								class="fa fa-linkedin-square"></i></a>
-
 					</div>
 				</div>
 				<div class="col-sm-4 col-md-6 order-1  order-md-2 text-center">
@@ -208,8 +206,7 @@
 						years’ experience in growing and exporting high quality roses directly from our farms located
 						near Bogotá, Colombia to North America, Europe, Asia and Australia. <br>
 
-						Our farms are certified Rainforest Alliance since 2009 and Sedex (SMETA) audit, which
-						supports our commitment to the environment and the well-being of our employees.</p>
+						Our farms are certified Rainforest Alliance since 2009 and Sedex (SMETA) audit, We are commited to the environment and the well-being of our employees.</p>
 
 					<a class="btn btn-md ml-0 text-white" href="about.html" role="button"
 						style="background-color: #ff0089;">Show more</a>
